fix logo on mobile

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 
 .hamburger-logo {
     height: 75%;
+    aspect-ratio: 1 / 1;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 10px;
@@ -696,7 +697,7 @@ footer img {
     .presentation {
         max-width: 570px;
     }
-    
+
     .flex-50 {
         width: 100%;
     }
